copied files with recent API changes; updated README
