# swagger_server/controllers/word_controller.py
@@ -6,12 +6,12 @@ from swagger_server.models.word import Word  # noqa: E501
 from swagger_server import util
 
 
-def create_word(body):  # noqa: E501
+def create_word(body=None):  # noqa: E501
     """Create a new word in the database
 
      # noqa: E501
 
-    :param body: Word object that needs to be added to the store
+    :param body: 
     :type body: dict | bytes
 
     :rtype: None
@@ -49,12 +49,12 @@ def get_word_by_id(word_id):  # noqa: E501
     return 'do some magic!'
 
 
-def update_word(body):  # noqa: E501
+def update_word(body=None):  # noqa: E501
     """Update an existing word
 
      # noqa: E501
 
-    :param body: Word object that needs to be added to the store
+    :param body: 
     :type body: dict | bytes
 
     :rtype: None
